2013-04-22 Miguel de Dios <miguel.dedios@artica.es>

	* operation/users/user_edit.php, include/functions_graph.php:
	improved the source code style.
	
	* mobile/operation/agent.php, mobile/operation/modules.php: somes
	fixes.

2013-04-22  Mario Pulido <mario.pulido@artica.es>         

	* include/help/es/help_alerts.php,
        include/help/en/help_alerts.php: Changes in help style

2013-04-22 Miguel de Dios <miguel.dedios@artica.es>

	* mobile/operation/events.php, mobile/operation/module_graph.php,
	mobile/operation/modules.php, mobile/operation/agent.php,
	mobile/include/ui.class.php: some fixes.
	
	* include/functions_reporting.php, include/functions_groups.php,
	include/functions_graph.php: some fixes.

2013-04-22  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_ui.php
	include/functions_db.php
	index.php
	images/splash_bg.png
	images/pandora_login.png
	images/login_background.jpg
	images/pandora_tinylogo.png
	images/input_user.png
	images/input_lock.png
	images/pandora_login_enterprise.png
	general/error_emptyconfig.php
	general/error_perms.php
	general/error_authconfig.php
	general/login_page.php
	general/error_noconfig.php
	general/logoff.php
	general/error_install.php
	general/error_dbconfig.php
	general/error_screen.php: Change the login appearence
	unifyng code of login, logout and error screens

	* pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql
	godmode/users/configure_user.php
	operation/users/user_edit.php: Added new options in user 
	configuration to metaconsole agents editor and more meta
	options. Avoid to show useless options when metaconsole
	is enabled

2013-04-20  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_alert-matches.php: Updated help.

2013-04-19 Miguel de Dios <miguel.dedios@artica.es>
